Add CommonAutomatedWorkstation to extend from